--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.41.0",
