--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.0.23",
     "uuid": "^9.0.0",
     "vue": "^3.2.41",
     "vue3-cookies": "^1.0.6"
