--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
+    "@types/node": "^18.11.8",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
