pages配下にmulti-word-component-namesが適用されないように修正

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,14 @@
     "plugin:tailwindcss/recommended",
     "prettier"
   ],
-  "overrides": [],
+  "overrides": [
+    {
+      "files": ["src/components/pages/*.vue"],
+      "rules": {
+        "vue/multi-word-component-names": "off"
+      }
+    }
+  ],
   "parserOptions": {
     "parser": "@typescript-eslint/parser",
     "ecmaVersion": "latest",
