lucide-vue-nextをinstall

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.95.0",
     "pinia": "^2.0.23",
     "uuid": "^9.0.0",
     "vue": "^3.2.41",
