tailwindcss/migration-from-tailwind-2を無効化

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,5 +26,8 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["vue", "@typescript-eslint", "tailwindcss"]
+  "plugins": ["vue", "@typescript-eslint", "tailwindcss"],
+  "rules": {
+    "tailwindcss/migration-from-tailwind-2": "off"
+  }
 }
