--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daisyui": "^2.36.1",
     "lucide-vue-next": "^0.95.0",
     "pinia": "^2.0.23",
     "uuid": "^9.0.0",
