--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,8 @@
   "rules": {
     "tailwindcss/migration-from-tailwind-2": "off",
     "vue/require-v-for-key": "off",
-    "vue/valid-v-for": "off"
+    "vue/valid-v-for": "off",
+    "tailwindcss/no-custom-classname": "off",
+    "tailwindcss/classnames-order": "off"
   }
 }
